--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@
 # R and tidyverse
 # Python3 with pandas,numpy,argparse
 # Snakemake
+# gffread & gffcompare 
 
 # Define Path for results
 resultsdir: ""
